--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -14,3 +14,11 @@ body {
     padding-top: 8rem;
     padding-bottom: 10rem;
 }
+.image-bg {
+    width: 100%;
+    @media (min-width: 768px) {
+      width: 60%;
+    }
+    display: block;
+    margin: 0 auto;
+  }
